# PreciousMoment

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/images/: preview.gif:Zone.Identifier
src/: config.cpp  config.h  main.cpp
src/components/: camera_component.h  physics_component.h  render_component.h  transform_component.h
src/controller/: app.cpp  app.h
src/factories/: factory.cpp  factory.h
src/shaders/: shader.frag  shader.vert  vertex.glsl
src/systems/: camera_system.cpp  camera_system.h  motion_system.cpp  motion_system.h  render_system.cpp  render_system.h
src/view/: shader.cpp  shader.h
